--- a/css/layout.css
+++ b/css/layout.css
@@ -23,5 +23,40 @@
 }
 
 /* Posititoning Classes */
+.shadow:nth-of-type(2){
+  width: 65%;
+  margin: 0;
+  height: 600px;
 
+  float: left;
 
+}
+.shadow:nth-of-type(3){
+  width: 32%;
+  margin: 0 auto;
+  height: 600px;
+  float: right;
+}
+
+.shadow:nth-of-type(4){
+  width: 32%;
+  margin-right: 0.66%;;
+  float: left;
+  margin-top: 30px;
+
+}
+
+.shadow:nth-of-type(5){
+  width: 32%;
+  margin-left: 1.33%;
+  float: left;
+  margin-top: 30px;
+
+}
+.shadow:nth-of-type(6){
+  width: 32%;
+  margin-left: 0.67%;;
+  float: right;
+  margin-top: 30px;
+
+}
